Version 7.3.71 (21.06.2023) - UPDATED: Discord API / several maven plugin versions - FIXED: Error in IRC-Client when no user is selected - FIXED: NPE in diplomacy before init - CHANGED: Diplomacy pane behaviour completed - CHANGED: A number of dependency versions to variables - STARTED: Diplomacy store functionality